# parallel_bfs

./: CMakeLists.txt  Readme.md  main.cpp
src/: parbfs.cpp  parbfs.h  seqbfs.cpp  seqbfs.h
